--- a/WalltechOLEDWatchv4.3
+++ b/WalltechOLEDWatchv4.3
@@ -7,9 +7,9 @@
  *    \ \____________\ \__\ \__\ \_______\ \_______\ \__\ \ \_______\ \_______\ \__\ \__\
  *     \|____________|\|__|\|__|\|_______|\|_______|\|__|  \|_______|\|_______|\|__|\|__|
  * 
- * This is the default code for the Walltech OLED Watch v4.2
+ * This is the default code for the Walltech OLED Watch v4.3
  * 
- * Designed specifically to work with the Walltech OLED Watch v4.2:
+ * Designed specifically to work with the Walltech OLED Watch v4.3:
  * ----> http://wp.me/P4qDhv-fm
  * 
  * Walltech invests time and resources providing this open source code, 
@@ -25,9 +25,9 @@
  * Largely based on a work at http://www.arduino.cc
  ****************************************************/
 
-#include <Wire.h>// Including the necessary libraries, if you don't have one, google it, it should come up
+#include <Wire.h>// Including the necessary libraries
 #include <GOFi2cOLED.h>// This library can be found here - http://www.geekonfire.com/wiki/index.php?title=I2C_OLED_Panel(128x64)
-#include "RTClib.h"
+#include "RTClib.h"//These are Adafruit libraries, support them at www.adafruit.com!
 #include "Adafruit_MCP9808.h"
 
 GOFi2cOLED GOFoled;// instantiating constructors 
